# quarkgate

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum  package.json
.github/workflows/: ci.yml
cmd/admin/: main.go
config/: execution_policy.yaml  memory_matrix.yaml  memory_spectrum.yaml
docs/: decision-log-suggested.md  mvp-milestones.md  mvp-signoff-checklist.md  owner-operator-checklist.md  provider-tos-and-memory-architecture.md
migrations/: 001_initial.sql  002_seed_providers.sql  003_usage_ledger_links.sql
schemas/: driver-manifest.v1.json  metering-event.v1.json  quarkgate-request.v1.json
scripts/: bootstrap-python.sh  bootstrap-vault-from-env.sh  build-e2b-playwright-template.sh  deploy-to-vps.sh  dev-process-guard.py  dev-process-guard.sh  dev_supervisor.py  e2e-smoke.sh  init-kuzu-db.py  load-reconciliation-test.js  prepare-production.sh  provision-do-firewall.sh  remote-vps-bootstrap.sh  resolve-dev-infra.py  setup-kuzu.sh  setup-lance.sh  start-dev-stack.sh  start-memory-local.sh  streaming-p95-benchmark.js  sync-memory-env.py  test-dev-gateway.sh  verify-mvp.sh
services/dev-dashboard/: pyproject.toml
services/dev-dashboard/quark_dev_dashboard/: __init__.py  main.py  probes.py
services/dev-dashboard/quark_dev_dashboard/templates/: dashboard.html
services/dev-unified/: pyproject.toml
services/dev-unified/quark_dev_unified/: __init__.py  main.py
services/embed-worker/: pyproject.toml
services/embed-worker/quark_embed_worker/: __init__.py  main.py
services/kuzu-bridge/: Dockerfile  README.md  pyproject.toml
services/kuzu-bridge/quark_kuzu_bridge/: __init__.py  main.py  schema.cypher  store.py
services/kuzu-bridge/tests/: test_store.py
tools/: README.md
(+112 files in other folders)
