[project]
name = "quark-kuzu-bridge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "kuzu>=0.11.3",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["quark_kuzu_bridge*"]
